--- a/package.json
+++ b/package.json
@@ -8,10 +8,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@vueuse/core": "^7.6.1",
+    "apexcharts": "^3.33.1",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
+    "lodash": "^4.17.21",
+    "openzeppelin-solidity": "^4.5.0",
+    "pinia": "^2.0.11",
+    "reselect": "^4.1.5",
+    "solidity-coverage": "^0.7.19",
+    "truffle": "^5.4.33",
+    "truffle-flattener": "^1.6.0",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "vue": "^3.2.25",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "autoprefixer": "^10.4.2",
+    "naive-ui": "^2.25.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22",
     "vite": "^2.8.0"
   }
 }
