--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "dependencies": {
     "@vueuse/core": "^7.6.1",
     "apexcharts": "^3.33.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
+    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "openzeppelin-solidity": "^4.5.0",
     "pinia": "^2.0.11",
