--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
+    "browserify-zlib": "^0.2.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
     "dotenv": "^16.0.0",
+    "events": "^3.3.0",
     "lodash": "^4.17.21",
     "openzeppelin-solidity": "^4.5.0",
     "pinia": "^2.0.11",
+    "process": "^0.11.10",
     "reselect": "^4.1.5",
     "solidity-coverage": "^0.7.19",
+    "stream-browserify": "^3.0.0",
     "truffle": "^5.4.33",
     "truffle-flattener": "^1.6.0",
     "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "util": "^0.12.4",
     "vue": "^3.2.25",
     "web3": "^1.7.0"
   },
