--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^7.6.1",
+    "ant-design-vue": "^3.1.1",
     "apexcharts": "^3.33.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -34,14 +35,15 @@
     "truffle-hdwallet-provider-privkey": "^0.3.0",
     "util": "^0.12.4",
     "vue": "^3.2.25",
+    "vue-router": "^4.0.14",
     "web3": "^1.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
-    "naive-ui": "^2.25.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.8.0"
   }
 }
