feat: views wip

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.0",
     "events": "^3.3.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "openzeppelin-solidity": "^4.5.0",
     "pinia": "^2.0.11",
     "process": "^0.11.10",
