--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "@vueuse/core": "^7.6.1",
     "ant-design-vue": "^3.1.1",
     "apexcharts": "^3.33.1",
@@ -29,6 +30,7 @@
     "pinia": "^2.0.11",
     "process": "^0.11.10",
     "reselect": "^4.1.5",
+    "sass": "^1.53.0",
     "solidity-coverage": "^0.7.19",
     "stream-browserify": "^3.0.0",
     "truffle": "^5.4.33",
@@ -37,6 +39,7 @@
     "util": "^0.12.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
+    "vue3-apexcharts": "^1.4.1",
     "web3": "^1.7.3"
   },
   "devDependencies": {
@@ -44,6 +47,7 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
+    "unplugin-auto-import": "^0.9.0",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.8.0"
   }
