--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
+    "@truffle/hdwallet-provider": "^2.0.9",
     "@vueuse/core": "^7.6.1",
     "ant-design-vue": "^3.1.1",
     "apexcharts": "^3.33.1",
