--- a/packages/dex/package.json
+++ b/packages/dex/package.json
@@ -9,15 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
+    "ethers": "^5.7.2",
+    "framer-motion": "^6.5.1",
+    "next": "13.1.1",
+    "react-dom": "18.2.0",
+    "react": "18.2.0",
+    "wagmi": "^0.7.8",
+    "zustand": "^4.2.0"
+  },
+  "devDependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@uniswap/sdk-core": "^3.1.0",
+    "@uniswap/v3-sdk": "^3.9.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postcss": "^8.4.14",
+    "sass": "^1.55.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.9.4"
   }
 }
