--- a/packages/dex/package.json
+++ b/packages/dex/package.json
@@ -1,12 +1,12 @@
 {
   "name": "dex",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
@@ -14,12 +14,20 @@
     "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.13",
+    "@next/eslint-plugin-next": "^13.1.1",
     "@next/font": "13.1.1",
+    "@uniswap/token-list-bridge-utils": "^1.1.0",
+    "@uniswap/token-lists": "^1.0.0-beta.31",
+    "ajv": "^8.11.2",
+    "ajv-formats": "^2.1.1",
+    "eslint-config-prettier": "^8.6.0",
     "ethers": "^5.7.2",
     "framer-motion": "^6.5.1",
+    "lodash-es": "^4.17.21",
     "next": "13.1.1",
-    "react-dom": "18.2.0",
+    "prettier": "^2.8.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "wagmi": "^0.7.8",
     "zustand": "^4.2.0"
   },
@@ -36,5 +44,10 @@
     "sass": "^1.55.0",
     "tailwindcss": "^3.2.1",
     "typescript": "4.9.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
