--- a/packages/dex/tsconfig.json
+++ b/packages/dex/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "utils/validateTokenLists.js"  ],
   "exclude": [
     "node_modules"
   ]
