fix: type errors

--- a/packages/dex/package.json
+++ b/packages/dex/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@apollo/client": "^3.7.4",
