feat: token search
- feat: added alchemy api

--- a/packages/dex/package.json
+++ b/packages/dex/package.json
@@ -16,12 +16,14 @@
     "@emotion/styled": "^11.10.5",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.13",
+    "@lyrasearch/lyra": "^0.4.3",
     "@next/eslint-plugin-next": "^13.1.1",
     "@next/font": "13.1.1",
     "@uniswap/token-list-bridge-utils": "^1.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
+    "alchemy-sdk": "^2.4.0",
     "eslint-config-prettier": "^8.6.0",
     "ethers": "^5.7.2",
     "framer-motion": "^6.5.1",
