feat: install/setup walletconnect modal
chore: upgrade wagmi
chore: install pkg dependencies

--- a/packages/dex/package.json
+++ b/packages/dex/package.json
@@ -21,6 +21,9 @@
     "@next/font": "13.1.1",
     "@uniswap/token-list-bridge-utils": "^1.1.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
+    "@wagmi/core": "^0.9.4",
+    "@web3modal/ethereum": "^2.1.1",
+    "@web3modal/react": "^2.1.1",
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
     "alchemy-sdk": "^2.4.0",
@@ -29,11 +32,13 @@
     "framer-motion": "^6.5.1",
     "graphql": "^16.6.0",
     "lodash-es": "^4.17.21",
+    "lokijs": "^1.5.12",
     "next": "13.1.1",
+    "pino-pretty": "^9.1.1",
     "prettier": "^2.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.7.8",
+    "wagmi": "^0.11.4",
     "zustand": "^4.2.0"
   },
   "devDependencies": {
